--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
 <body>
     <h1>Manipulación del DOM básica</h1>
 
+    <p>esto es un parrafo</p>
+    <p class="parrafito">esto es un parrafito con clase</p>
+    <p id="pid">esto es un parrafo con id</p>
+
+    <input type="text" placeholder="escribe algo aquí"  >
+
     <script src="./script.js"></script>
 </body>
 </html>
