--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Manipulación en java</title>
 </head>
 <body>
-    <h1>Manipulación del DOM básica</h1>
+    <h1 class="verde">Manipulación del DOM básica</h1>
 
     <p>esto es un parrafo</p>
     <p class="parrafito">esto es un parrafito con clase</p>
